# cookbook.paulandsierra.com

./: .gitignore  Makefile  categories.html  index.html  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: pelican.yml
2/: index.html
3/: index.html
archives/: index.html
categories/entree/: index.html
content/: CNAME  baked-lemon-spaghetti.rst  pie-crust.rst  thai-coconut-curry-butternut-squash-soup.rst
content/recipes/: avocado-toast.rst  bacon-and-brussel-sprout-salad.rst  baked-lemon-spaghetti.rst  basil-lemon-pasta-salad.rst  biscuits-and-gravy.rst  breakfast-burritos.rst  broccoli-with-riccota.rst  buffalo-chickpea-chowder.rst  buffalo-chickpea-salad-sandwich.rst  caesar-dressing-two-ways.rst  caesar-salad-wrap.rst  cauliflower-general-tsos.rst  chana-masala.rst  chickpea-avocado-salad.rst  chickpea-chicken-salad.rst  coconut-milk-chia-seed-pudding.rst  corn-chowder.rst  creamy-italian-dressing.rst  lentil-loaf-sandwich.rst  lentil-loaf.rst  mac-and-cheese.rst  orzo-with-peas-and-parmesan.rst  parmesan-orzo-with-peas.rst  pasta-e-caci.rst  pie-crust.rst  simple-salad.rst  spicy-thai-noodles.rst  spicy-vegetable-soup.rst  stuffed-shells.rst  sweet-potato-corn-fritters.rst  thai-coconut-curry-butternut-squash-soup.rst  tortellini-soup.rst  tortilla-soup.rst  vietnamese-spring-rolls.rst
content/recipies/: baked-lemon-spaghetti.rst  dahi-toast.rst  (+17 more)
drafts/: vietnamese-spring-rolls.html
feeds/: all.atom.xml  dessert.atom.xml  entree.atom.xml  misc.atom.xml
last/: index.html
tags/: index.html
(+98 files in other folders)
