[tool.poetry]
name = "cookbook.paulandsierra.com"
version = "0.1.0"
description = ""
authors = ["Paul Schwendenman <schwendenman.paul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.5.4"
pelican-tag-cloud = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
